# python-spielplatz

./: .gitignore  .pre-commit-config.yaml  README.md  conda-lock.yml  environment.yml  noxfile.py  pyproject.toml
docs/: checkers-game-cli.md  checkers-game-reference.md  conf.py  index.md  index.rst  reference.md  reference.rst
src/python_spielplatz/checkers/: board_state.py  boardstate.py  checkerserror.py  cli.py  cli_settings.py  game_settings.py  game_state.py  game_state_persistence.py  movement.py  pieces.py  rule_set_interface.py  rule_set_map.py  rule_sets.py  standard_rule_set.py
tests/: test_pieces.py
